CICO-41809 fixes options top alignment for all themes that were off-center

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -120,9 +120,6 @@
 
             #content { height: auto; }
 
-            #options {
-                margin-top: 0;
-            }
         }
 
         @media only screen and (min-height: 1024px) { padding-top: 200px; }
